wo test